# E-Comm-Application-using-FastAPI

./: .env  README.md  ecommerce.db  pyproject.toml  requirements.txt
app/: exception.py  main.py
app/auth/: models.py  routes.py  schemas.py  util.py
app/cart/: models.py  routes.py  schemas.py
app/core/: config.py  database.py  dependencies.py  error_handlers.py  security.py
app/orders/: models.py  routes.py  schemas.py
app/products/: models.py  routes.py  schemas.py
app/utils/: email.py  logging.py
